--- a/app/views/themes/waterfall/events/_form.html.erb
+++ b/app/views/themes/waterfall/events/_form.html.erb
@@ -1,4 +1,5 @@
     <%= form_for @event, :html => {:id => :form} do |f| -%>
+      <%= f.hidden_field :publish_status %> 
       <table class="form" width="100%" border="0" cellspacing="0" cellpadding="0">
         <tr>
           <th width="90">活动标题</th>
@@ -80,6 +81,12 @@
           </td>
         </tr>
       </table>
+      
+      <p align="center">
+        <%= link_to "javascript:void(0)", :class => [:btn_gray_b, :save_event_button] do  %>
+          <span> 保存</span>
+        <% end %>
+      </p>
 
     <% end -%>
  
