--- a/app/views/themes/waterfall/events/index.html.erb
+++ b/app/views/themes/waterfall/events/index.html.erb
@@ -1,2 +1,153 @@
-<% title @title %>
-<h2>活动</h2>
+<% content_for :title, @title%>
+<% content_for :js do %>
+  <%#= theme_javascript_include_tag "events" %>
+<% end %>
+<% content_for :css do %>
+	<%= theme_stylesheet_link_tag "event" %>
+<% end %>
+<div class="kv_2col">
+  <% @top_events.each do |event| %>
+    <div class="col <%= cycle("mr20", "odd") -%>  ">
+      <dl class="clearfix">
+        <dt>
+          <%= link_to event_path(event) do %>
+            <%= image_tag event.poster_url(:large), :size => '130x195' %>
+          <% end %>
+        </dt>
+        <dd>
+          <span class="type">
+            <%= event.tag_list.join(',') %>
+          </span>
+          <h1>
+            <%= link_to event.title, event_path(event)  %>
+          </h1>
+          <div class="info">
+            时间：<%= event.begin_end_at %>
+            <br />
+            地点：<%= event.full_address  %>
+            <br />
+            组织者: 
+            <%= link_to  event.user.username, 
+            user_path(event.user, :trailing_slash => true) %>
+          </div>
+          <span class="p_count">
+            <%= event.participants_count %>人参加  |  
+            <%= event.followers_count %>人感兴趣
+          </span>
+        </dd>
+      </dl>
+    </div>
+  <% end %>
+  <div class="clear"></div>
+  </div>
+      <div class="whitespace eventmain">
+   	  <div class="left">
+      	<div class="event_tag clearfix">
+        	<span>热门活动标签：</span>
+         <ul class="tags">
+           <%= tags_cloud() %>
+         </ul>
+         <div class="clear"></div>
+        </div>
+        <div class="event_list">
+          <% @events.each do |event| %>
+            <dl class="clearfix">
+              <dt>
+                <%= link_to event_path(event) do %>
+                  <%= image_tag event.poster_url(:thumb), :size => '100x150', :alt => event.title %>
+                <% end %>
+              </dt>
+              <dd>
+                <span class="type">
+                  <%= event_item_tags(event) %>
+                </span>
+                <h2> <%= link_to event.title, event_path(event)  %></h2>
+                <div class="info">时间:  <%= event.begin_end_at %><br />
+                  地点:  <%= event.full_address %><br />
+                  组织者：<%= link_to  event.user.username, 
+                      user_path(event.user, :trailing_slash => true) %>
+                </div>
+                <div class="p_count2">
+                  <span><%= event.participants_count %>人参加  |  <%= event.followers_count %>人感兴趣</span>
+                </div>
+              </dd>
+            </dl>
+          <% end %>
+        </div>
+        <div class="pagination">
+          <%= paginate @events, :outer_window => 2 %>
+        </div>
+        </div>
+   	  <div class="right">
+        <div class="sidebox">
+          <%= link_to new_event_path, :class => :btn_createvent do %>
+            <span>我要创建活动</span>
+          <% end %>
+        </div>
+       	  <div class="sidebox">
+            <div class="title"><a href="" class="float_r">查看全部</a><h3>我参加/组织的活动</h3></div>
+            <div class="side_event">
+                <dl class="clearfix">
+                	<dt><a href="event_detail.html"><img src="images/test/event_70_01.jpg" alt="美酒乐调酒体验活动" width="70" height="105" /></a></dt>
+                    <dd>
+                        <h3><a href="event_detail.html">美酒乐调酒体验活动</a></h3>
+                        <div class="info">6月16日至7月29日<br />
+                          上海 浦东新区 成上路云台路<br />
+                          上南八村27号<br />
+                        </div>
+                        <div class="p_count2">35 人参加 | 68人感兴趣</div>
+                    </dd>
+                    <div class="clear"></div>
+                </dl>
+            </div>
+            </div>
+            <div class="sidebox">
+            <div class="title">
+              <a href="" class="float_r">查看全部</a>
+              <h3>朋友参加/组织的活动</h3></div>
+            <div class="side_event">
+                <dl class="clearfix">
+                	<dt><a href="event_detail.html"><img src="images/test/event_70_01.jpg" alt="美酒乐调酒体验活动" width="70" height="105" /></a></dt>
+                    <dd>
+                        <h3><a href="event_detail.html">美酒乐调酒体验活动</a></h3>
+                        <div class="info">6月16日至7月29日<br />
+                          上海 浦东新区 成上路云台路<br />
+                          上南八村27号<br />
+                        </div>
+                        <div class="p_count2">35 人参加 | 68人感兴趣</div>
+                    </dd>
+                    <div class="clear"></div>
+                </dl>
+            </div>
+            </div>
+            <div class="sidebox">
+              <div class="title">
+                <h3>推荐的活动</h3>
+              </div>
+              <div class="side_event">
+                <% @recommend_events.each do |event| %>
+                  <dl class="clearfix">
+                    <dt>
+                      <%= link_to event_path(event) do %>
+                        <%= image_tag event.poster_url(:x_thumb), :size => '70x105', :alt => event.title %>
+                      <% end %>
+                      <dd>
+                        <h3> <%= link_to event.title, event_path(event)  %></h3>
+                        <div class="info">
+                          <%= event.begin_end_at %>
+                          <br />
+                          <%= event.full_address %>
+                          <br />
+                        </div>
+                        <div class="p_count2">
+                          <%= event.participants_count %>人参加  |  <%= event.followers_count %>人感兴趣
+                        </div>
+                      </dd>
+                      <div class="clear"></div>
+                    </dl>
+                  <% end %>
+                </div>
+              </div>
+            </div>
+            <div class="clear"></div>
+      </div>
