--- a/app/views/themes/waterfall/events/edit.html.erb
+++ b/app/views/themes/waterfall/events/edit.html.erb
@@ -59,8 +59,9 @@
     <div class="clear"></div>
   </div>
   <div class="mb30 align_c">
-    <a href="javascript:void(0)"  id="button_add_wines"  class=" btn_gray_b">
+    <%= link_to new_event_event_wine_path(@event), :class => :btn_gray_b do  %>
       <span>继续添加</span></a>
+    <% end %>
   </div>
 <% else %>
   <div class="mb30 align_c">
