--- a/app/views/themes/waterfall/events/show.html.erb
+++ b/app/views/themes/waterfall/events/show.html.erb
@@ -30,50 +30,7 @@
               <%= @event.participants_count %>人参加  |  <%= @event.followers_count %>人感兴趣
             </span>
             <div class="action">
-
-              <div id="join_form"  style="display: none" ></div>
-              <div id="cancle_form" style="display: none"></div>
-              <% if @event.joinedable?  %>
-                <% if @event.have_been_joined? @user.id %>
-                  <% if @event.have_been_cancle_joined? @user.id # 已经取消%>
-                    <span class="icon_fol mr5">
-                      报名已取消
-                    </span>
-                    <span class="cancl_fol mr5">
-                      <%= link_to edit_event_participant_path(@event,@participant), 
-                        :class => [:btn_bluesky_s, :mr5, :ajax], :remote => true do %>
-                          <span>重新参加</span>
-                       <% end %>
-                    </span>
-                  <% else %>
-                    <span class="icon_fol mr5">
-                      已报名参加
-                    </span>
-                    <span class="cancl_fol mr5">
-                      <%= link_to "(取消)",
-                        cancle_event_participant_path(@event, @participant), 
-                        :class => :ajax, :remote => true %>
-                    </span>
-                  <% end %>
-                <% else %>
-                <%= link_to new_event_participant_path(@event), 
-                  :class => [:btn_bluesky_s, :mr5, :ajax], :remote => true do %>
-                    <span>我要参加</span>
-                 <% end %>
-               <% end %>
-              <% else %>
-                <% if @event.timeout? # 活动已经举行 %>
-                  <%= link_to 'javascript:void(0)',
-                    :class => [:btn_bluesky_s, :mr5, :ajax], :remote => true do %>
-                      <span>活动已经过期</span>
-                  <% end %>
-                <% elsif @event.ausgebucht? %>
-                  <%= link_to 'javascript:void(0)',
-                    :class => [:btn_bluesky_s, :mr5, :ajax], :remote => true do %>
-                      <span>人数已满</span>
-                  <% end %>
-                <% end %>
-              <% end %>
+              <%= render 'join_event_button' %>
 
               <div id="follow_form"  style="display: none" ></div>
 
@@ -102,7 +59,7 @@
             <h2>活动介绍</h2>
           </div>
           <div class="content">
-           <%= @event.description  %>
+           <%= simple_format( @event.description ) %>
           </div>
           <!--end section-->
         </div>
