--- a/app/views/themes/waterfall/users/_sub_nav.html.erb
+++ b/app/views/themes/waterfall/users/_sub_nav.html.erb
@@ -10,7 +10,8 @@
      # "testing_notes"  => ["testing_notes", 0],
      "followings"     => [followings_user_path(@user), @user.followings_count],
      "followers"    => [followers_user_path(@user), @user.followers_count],
-     "albums"       => [albums_user_path(@user, :trailing_slash => true), @user.albums_count]
+     "albums"       => [albums_user_path(@user, :trailing_slash => true), @user.albums_count],
+     "events"       => [events_user_path(@user, :trailing_slash => true)]
  } %>
 
   <div class="hp_header">
