--- a/app/views/themes/waterfall/event_wines/new.html.erb
+++ b/app/views/themes/waterfall/event_wines/new.html.erb
@@ -87,7 +87,7 @@
   </script>
   <script type="text/template" id="select_wine_template">
       <dt>
-        <a href="#">
+        <a href="javascript:void(0)">
           <span class="delet remove"></span>
         </a>
         <a href="<@= url @>">
