--- a/app/views/themes/waterfall/events/edit.html.erb
+++ b/app/views/themes/waterfall/events/edit.html.erb
@@ -66,7 +66,7 @@
 <% else %>
   <div class="mb30 align_c">
     <a href="javascript:void(0)"  id="button_add_wines"  class=" btn_gray_b">
-      <span>添加活动用酒</span></a>
+      <span>更新活动用酒</span></a>
   </div>
 <% end %>
         
