--- a/app/views/themes/waterfall/events/show.html.erb
+++ b/app/views/themes/waterfall/events/show.html.erb
@@ -156,6 +156,7 @@
             <script language="javascript" type="text/javascript">
               $(document).ready(function(){
                   $('.comment_focus').click(function(){
+                    $('.comment_post_star').effect("highlight", {}, 3000);
                     $("#event_comment_body").focus();
                     });
                   });
