--- a/app/views/themes/waterfall/events/edit.html.erb
+++ b/app/views/themes/waterfall/events/edit.html.erb
@@ -60,7 +60,7 @@
   </div>
   <div class="mb30 align_c">
     <%= link_to new_event_event_wine_path(@event), :class => :btn_gray_b do  %>
-      <span>继续添加</span></a>
+      <span>更新活动用酒</span></a>
     <% end %>
   </div>
 <% else %>
