--- a/app/views/themes/waterfall/events/index.html.erb
+++ b/app/views/themes/waterfall/events/index.html.erb
@@ -43,10 +43,24 @@
       <div class="whitespace eventmain">
    	  <div class="left">
       	<div class="event_tag clearfix">
-        	<span>热门标签：</span>
+        	<span>城市：</span>
          <ul class="tags">
            <%= city_tags %>
+         </ul>
+         <div class="clear"></div>
+        </div>
+
+      	<div class="event_tag clearfix">
+        	<span>活动时间：</span>
+         <ul class="tags">
            <%= static_date_tags %>
+         </ul>
+         <div class="clear"></div>
+        </div>
+
+      	<div class="event_tag clearfix">
+        	<span>热门标签：</span>
+         <ul class="tags">
            <%= tags_cloud %>
          </ul>
          <div class="clear"></div>
