--- a/app/views/themes/waterfall/event_wines/new.html.erb
+++ b/app/views/themes/waterfall/event_wines/new.html.erb
@@ -20,7 +20,13 @@
   <h1 class="main_title">添加活动用酒</h1>
   <div class="search mb20" id="search_input_view">
     <input name="" type="text" class="text common_search mr5" placeholder="请输入酒款名称" />
-    <span class="loading" style="display:none">载入中......</span>
+    <%= link_to "javascript:void(0)", :class => [:search_wine_button,:btn_gray_b]  do %>
+      <span>搜索</span>
+    <% end %>
+    <span class="loading" style="display:none">
+      <%= theme_image_tag "common/loading.gif" %>
+    </span>
+    <span id="warning" class="red" style="display: none"></span>
     <!--end mb20-->
   </div>
   <div class="mb30">
@@ -39,9 +45,12 @@
   </div>
   <script type="text/template" id="search_wine_list_template">
     <div class="search_result_space">
-      <p class="notice_b search_result_notice" >搜索结果:</p>
-      <div id="warning" class="red" style="display: none"></div>
+      <p class="notice_b search_result_notice" >搜索结果<span id="select_tips" class="red"></span>:</p>
       <div class="clear"></div>
+      <span class="loading_l" style="display:none">
+        <%= theme_image_tag "common/loading_l.gif" %>
+        搜索中, 请稍后...
+      </span>
       <div class="wines">
       </div>
       <!--end wine_select-->
