Bugs Fixed aboves.

--- a/app/views/themes/waterfall/wine_details/new.html.erb
+++ b/app/views/themes/waterfall/wine_details/new.html.erb
@@ -2,7 +2,7 @@
 <% content_for :css do %>
     <%= theme_stylesheet_link_tag :hp, :add %>
 <% end %>
-<%#= theme_javascript_include_tag 'wine_registers_variety', 'region_world' %>
+<%= theme_javascript_include_tag 'wine_registers_variety', 'region_world' %>
 
 <div class="whitespace">
   <div class="addwine">
