修改bug，更换新浪微博key和secret

--- a/app/views/themes/waterfall/friends/setting_sns.html.erb
+++ b/app/views/themes/waterfall/friends/setting_sns.html.erb
@@ -8,7 +8,7 @@
       <span>返回</span>
   <% end %>
   <h1 class="main_title">同步设置</h1>
-  <h3>同步各大社区网站，随时分享你在IWine得有趣发现</h3>
+  <h3>同步各大社区网站，随时分享你在iWine得有趣发现</h3>
   <div class="sys">
     <ul>
       <li>
