--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -41,13 +41,13 @@
    <%= image_tag "common/add_event_step2.gif", :size => "180x22", :alt => "添加活动用酒" %>
  </div>
  <div class="mb30 align_c">
-   <a href="#" id="button_add_wines" class="btn_gray_b"><span>添加活动用酒</span></a>
+   <a href="javascript:void(0)" id="button_add_wines" class="btn_gray_b"><span>添加活动用酒</span></a>
  </div>
  <div class="add_event_step">
-   <%= image_tag "common/add_event_step2.gif", :size => "180x22", :alt => "上传活动海报" %>
+   <%= image_tag "common/add_event_step3.gif", :size => "180x22", :alt => "上传活动海报" %>
  </div>
  <div class="mb30 align_c">
-   <a href="add_event_poster.html" class=" btn_gray_b"><span>上传活动海报</span></a>
+   <a href="javascript:void(0)" class=" btn_gray_b"><span>上传活动海报</span></a>
  </div>
 </div>
 
