更改私信插件（mailboxes）ban版本到0.6.5； 将私信发送邮件部分放到controller中

--- a/app/views/message_mailer/reply_message_email.html.erb
+++ b/app/views/message_mailer/reply_message_email.html.erb
@@ -4,7 +4,7 @@
     <meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
   </head>
   <body>
-    <p>您好：<%= @message.conversation.get_reply_user(@message.sender) %></p>
+    <p>您好：<%= @message.conversation.get_reply_user(@message.sender).username %></p>
     <p><%= @message.sender.username %> 回复了你的消息。</p>
     <p><%= @message.body %></p>
     <br/>
