Fixed some bugs.

--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -21,7 +21,7 @@
             <div id="tag_container">
                 <%= f.hidden_field :tag_list  %> 
               <div id="input_tag_view">
-                <%= f.text_field :tags, :class => [:text, :tag], :placeholder => '输入后回车确定' %>
+                <%= f.text_field :tags, :class => [:text, :tag] %>
                  多个标签用“,”隔开 
                 <span id="tags_error" class="red"></span>
               </div>
