--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -107,7 +107,7 @@
         <% if @create_events.present? # 创建的活动  %>
           <div class="sidebox">
             <div class="title">
-              <%= link_to "查看全部", create_events_user_path(current_user), :class => :float_r %>
+              <%= link_to "查看全部", create_events_user_events_path(current_user), :class => :float_r %>
               <h3>我组织的活动</h3>
             </div>
             <div class="side_event">
@@ -142,7 +142,7 @@
         <% if @join_events.present? # 参加活动  %>
           <div class="sidebox">
             <div class="title">
-              <%= link_to "查看全部", join_events_user_path(current_user), :class => :float_r %>
+              <%= link_to "查看全部", join_events_user_events_path(current_user), :class => :float_r %>
               <h3>我参加的活动</h3>
             </div>
             <div class="side_event">
@@ -177,7 +177,7 @@
         <% if @follow_events.present? # 关注的活动  %>
           <div class="sidebox">
             <div class="title">
-              <%= link_to "查看全部", follow_events_user_path(current_user), :class => :float_r %>
+              <%= link_to "查看全部", follow_events_user_events_path(current_user), :class => :float_r %>
               <h3>我感兴趣的活动</h3>
             </div>
             <div class="side_event">
